Fix spacing between labels and inputs on new task modal

--- a/styles.css
+++ b/styles.css
@@ -101,23 +101,6 @@ body {
   align-items: center;
 }
 
-#btn-addnewtask {
-  font-family: inherit;
-  font-weight: bold;
-  font-size: 15px;
-  border: none;
-  border-radius: 100px;
-  width: 164px;
-  height: 48px;
-  color: var(--background-white-color);
-  background: var(--main-theme-color);
-  cursor: pointer;
-}
-
-#btn-addnewtask-mobile {
-  display: none;
-}
-
 .favicon-mobile {
   width: 30px;
   height: 30px;
@@ -212,11 +195,11 @@ dialog {
 }
 
 /* Style the modal background */
-#task-modal::backdrop {
+.task-modal::backdrop {
   background: rgba(0, 0, 0, 0.6);
 }
 
-#task-modal {
+.task-modal {
   top: 40%;
   left: 50%;
   transform: translate(-50%, -40%);
@@ -233,7 +216,6 @@ dialog {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-bottom: 16px;
 }
 
 .modal-header h3 {
@@ -249,7 +231,7 @@ dialog {
   cursor: pointer;
   color: #ea5555;
   transition: transform 0.2s ease-in-out, font-weight 0.2s ease-in-out;
-  transition-delay: 0.05s; /* Delay before scaling */
+  transition-delay: 0.1s; /* Delay before scaling */
 }
 
 .close-btn:hover {
@@ -265,10 +247,10 @@ dialog {
 form label {
   display: block;
   font-weight: 600;
-  font-size: 0.75em;
+  font-size: 0.75rem;
   margin-top: 12px;
   margin-bottom: 4px;
-  color: #828fa3;
+  color: var(--subheading-grey-color);
 }
 
 form input,
@@ -276,7 +258,7 @@ form textarea,
 form select {
   width: 100%;
   padding: 8px 10px;
-  border: 1px solid #828fa3;
+  border: 1px solid var(--subheading-grey-color);
   border-radius: 4px;
   font-family: inherit;
   font-size: 0.8125em;
@@ -287,18 +269,26 @@ form select {
   appearance: none; /* Remove native arrow */
   background: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="%23828FA3" stroke-width="3" viewBox="0 0 24 24"><path d="M6 9l6 6 6-6"/></svg>')
     no-repeat right 0.75rem center;
-
   background-size: 1.4rem;
   padding-right: 1rem;
   cursor: pointer;
 }
 
-/***** New task Modal ******/
-#addtask-modal::backdrop {
-  background: rgba(0, 0, 0, 0.6);
+#btn-addnewtask {
+  font-family: inherit;
+  font-weight: bold;
+  font-size: 15px;
+  border: none;
+  border-radius: 100px;
+  width: 164px;
+  height: 48px;
+  color: var(--background-white-color);
+  background: var(--main-theme-color);
+  cursor: pointer;
 }
 
-#addtask-form {
+/***** New task Modal ******/
+.addtask-form {
   display: flex;
   flex-direction: column;
   position: fixed;
@@ -317,7 +307,7 @@ form select {
   transition: all 0.3s ease-in;
 }
 
-#btn-create-task {
+.btn-create-task {
   background-color: var(--main-theme-color);
   color: var(--background-white-color);
   border-radius: 30px;
@@ -331,7 +321,7 @@ form select {
   flex-grow: 1; /* Allows the button to grow and fill the space */
 }
 
-#addtask-descrip {
+textarea {
   font-size: 16px;
   color: var(--main-text-color);
   height: 90px;
